<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_description">　　 This is an open source reading software newly developed by Kotlin, welcome to join us.</string>
    <string name="about_official_account">Official Accounts[开源阅读]</string>
    <string name="about_summary">Wechat official account [开源阅读软件]</string>
    <string name="accent">Accent</string>
    <string name="accent_background_diff">Need Difference between accent and background color</string>
    <string name="accent_text_diff">Need Difference between accent and text color</string>
    <string name="action_del">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="adapt_special_style">适配特殊样式</string>
    <string name="add">Add</string>
    <string name="add_book_source">Add Book source</string>
    <string name="add_book_url">Add book url</string>
    <string name="add_group">Add to Groups</string>
    <string name="add_remote_book">RemoteBook</string>
    <string name="add_replace_rule">New replacement</string>
    <string name="add_rss_source">Add RSS source</string>
    <string name="add_to_bookshelf">Add to Bookshelf</string>
    <string name="add_to_group">Add to Group</string>
    <string name="add_to_text_context_menu_s">Long tap to display Legado·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="add_url">Add url</string>
    <string name="adjust_chapter_index">Adjust of chapter index</string>
    <string name="adjust_chapter_page">Adjust of chapter page</string>
    <string name="adjust_pos">Adjustment position</string>
    <string name="agree">Agree</string>
    <string name="anti_alias">Anti-Aliasing</string>
    <string name="auto_clear_expired">"Clear expired search histories automatically "</string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="background_color">Background color</string>
    <string name="background_image">Background image</string>
    <string name="bar_elevation">Navigation bar shadow</string>
    <string name="bar_elevation_s">Current shadow size(elevation): %s</string>
    <string name="bitmap_cache_size">bitmap cache size</string>
    <string name="bitmap_cache_size_summary">Current cache max size %1$s MB</string>
    <string name="book_tree_uri_s">Save location for books opened from other apps</string>
    <string name="book_tree_uri_t">Book Save Location</string>
    <string name="cancel">Cancel</string>
    <string name="change_icon">Change icon</string>
    <string name="change_icon_summary">Switch the software icon displayed on the desktop</string>
    <string name="change_theme">选择主题</string>
    <string name="check_source_config">Check setting</string>
    <string name="check_update">Check for Updates</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="clear_webview_data">Clear WebView Data</string>
    <string name="clear_webview_data_summary">Clear all data in WebView</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_summary">gedoor,Invinciblelee,Xwite etc. Checking in github for details</string>
    <string name="cover_config">cover config</string>
    <string name="cover_config_summary">Generic Cover Rules and Default Cover Style</string>
    <string name="crash_log">Crash log</string>
    <string name="create_heap_dump">Create heap dump</string>
    <string name="custom_hosts">Custom Hosts</string>
    <string name="custom_hosts_summary">Domain name to IP mapping</string>
    <string name="day">Day</string>
    <string name="day_background_color">Day,Background color</string>
    <string name="day_color_accent">Day,Accent</string>
    <string name="day_color_primary">Day,Primary</string>
    <string name="day_nav_bar_immersion">白天操作栏颜色透明</string>
    <string name="day_navbar_color">Day,NavBar color</string>
    <string name="default_home_page">Default HomePage</string>
    <string name="direct_link_upload_config">Direct link upload configuration</string>
    <string name="direct_link_upload_rule">Straight chain upload rule</string>
    <string name="direct_link_upload_rule_summary">Used to generate direct link url when exporting book source, book list</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="download_url_rule">downloadUrlRule(downloadUrls)</string>
    <string name="edit_theme_abyss">渊默如海</string>
    <string name="edit_theme_modern_dark">现代深色</string>
    <string name="edit_theme_modern_light">现代浅色</string>
    <string name="edit_theme_monokai">莫奈亮光</string>
    <string name="edit_theme_monokai_dimmed">莫奈柔光</string>
    <string name="edit_theme_quiet_light">素影清晖</string>
    <string name="edit_theme_solarized_dark">日光深色</string>
    <string name="edit_theme_solarized_light">日光浅色</string>
    <string name="font_scale">font scale</string>
    <string name="font_scale_summary">font scale:%.1f</string>
    <string name="ignore_audio_focus_summary">Allow audio to be played at the same time as other applications</string>
    <string name="ignore_audio_focus_title">Ignore audio focus</string>
    <string name="image_retain_number">Number of manga reservations</string>
    <string name="image_retain_number_summary">Keep the number of chapters read %s</string>
    <string name="imm_navigation_bar">immersion navigation bar</string>
    <string name="imm_navigation_bar_s">The navigation bar becomes transparent</string>
    <string name="immersion_nav_bar">沉浸式操作栏</string>
    <string name="immersion_status_bar">Immersive status bar</string>
    <string name="is_compress">Compressed or not</string>
    <string name="language">Language</string>
    <string name="license">License</string>
    <string name="main_activity">Start page</string>
    <string name="media_button_on_exit_summary">Headset buttons are available even exit the app.</string>
    <string name="media_button_on_exit_title">Headset buttons are always available</string>
    <string name="navbar_color">NavBar color</string>
    <string name="night">Night</string>
    <string name="night_accent">Night,Accent</string>
    <string name="night_background_color">Night,Background color</string>
    <string name="night_nav_bar_immersion">夜间操作栏颜色透明</string>
    <string name="night_navbar_color">Night,NavBar color</string>
    <string name="night_primary">Night,Primary</string>
    <string name="ok">OK</string>
    <string name="only_update_read">仅更新已读完</string>
    <string name="other">Other</string>
    <string name="other_setting">Other settings</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="pref_anti_alias_summary">Anti-Aliasing when draw picture</string>
    <string name="pref_cronet_summary">use Cronet access network</string>
    <string name="primary">Primary</string>
    <string name="privacy_policy">User Privacy and Agreement</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="ps_default_read">Use Bookshelf as start page</string>
    <string name="ps_only_update_read">自动刷新时，只更新已读完的书籍</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="pt_default_read">Auto jump to Recent list</string>
    <string name="read_aloud_by_media_button_summary">通过耳机按键来启动朗读</string>
    <string name="read_aloud_by_media_button_title">耳机按键启动朗读</string>
    <string name="record_debug_log">Record debug log</string>
    <string name="record_heap_dump_s">Saving a heap dump when the application crashes by OOM</string>
    <string name="record_heap_dump_t">Capture heap dump</string>
    <string name="record_log">Record log</string>
    <string name="replace_enable_default_s">For new added books</string>
    <string name="replace_enable_default_t">Enable replace rule by default</string>
    <string name="save_day_theme_summary">Save day theme config</string>
    <string name="save_log">Save logs</string>
    <string name="save_night_theme_summary">Save night theme config</string>
    <string name="save_theme_config">Save theme config</string>
    <string name="set_local_password">Setting the local password</string>
    <string name="set_local_password_summary">The local password is used to encrypt and decrypt the sensitive information of the backup, if you need to synchronize between different devices, the local password should be the same.</string>
    <string name="show_add_to_shelf_alert_summary">Prompt to add to bookshelf when return from reading books that are not on the bookshelf</string>
    <string name="show_add_to_shelf_alert_title">Prompt to add to bookshelf when return</string>
    <string name="show_discovery">Show Discovery</string>
    <string name="show_manga_ui">漫画浏览</string>
    <string name="show_rss">Show RSS feeds</string>
    <string name="shrink_database">Shrink database</string>
    <string name="shrink_database_summary">Reduce the size of the database file</string>
    <string name="source_edit_text_max_line">Maximum number of rows in the source edit box</string>
    <string name="status_bar_immersion">The status bar color becomes transparent</string>
    <string name="summary">summary</string>
    <string name="system_auto">跟随系统</string>
    <string name="test">Test</string>
    <string name="theme_list">Theme list</string>
    <string name="theme_list_summary">Save, Import, Share theme</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="update_log">"What's new"</string>
    <string name="update_to_variant_summary">检查更新时查找其他签名版本</string>
    <string name="update_to_variant_title">检查更新查找版本</string>
    <string name="upload_url">upload url</string>
    <string name="user_agent">User agent</string>
    <string name="video_setting">视频设置</string>
    <string name="video_setting_summary">自动播放、全屏播放等配置</string>
    <string name="web_port_title">Web port</string>
    <string name="web_service_wake_lock">WebService Wake up Lock</string>
    <string name="web_service_wake_lock_summary">The wake-up lock is enabled when the web service is enabled, and some phones will be killed when the wake-up lock is enabled.</string>
    <string name="welcome_style">Launch interface style</string>
    <string name="welcome_style_summary">Startup screen image and whether to display text, etc.</string>
</resources>