<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.NameListPreference android:title="@string/language" android:key="language" android:defaultValue="auto" app:entries="@array/language" app:entryValues="@array/language_value" />
    <io.legado.app.lib.prefs.PreferenceCategory android:title="@string/main_activity" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/pt_auto_refresh" android:key="auto_refresh" android:summary="@string/ps_auto_refresh" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/only_update_read" android:key="onlyUpdateRead" android:summary="@string/ps_only_update_read" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/pt_default_read" android:key="defaultToRead" android:summary="@string/ps_default_read" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_discovery" android:key="showDiscovery" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_rss" android:key="showRss" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.NameListPreference android:title="@string/default_home_page" android:key="defaultHomePage" android:defaultValue="bookshelf" app:allowDividerAbove="false" app:allowDividerBelow="false" app:entries="@array/default_home_page" app:entryValues="@array/default_home_page_value" />
    </io.legado.app.lib.prefs.PreferenceCategory>
    <io.legado.app.lib.prefs.PreferenceCategory android:title="@string/other_setting" app:allowDividerBelow="false" app:iconSpaceReserved="false" app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.Preference android:title="@string/set_local_password" android:key="localPassword" android:summary="@string/set_local_password_summary" />
        <io.legado.app.lib.prefs.Preference android:title="@string/user_agent" android:key="userAgent" />
        <io.legado.app.lib.prefs.Preference android:title="@string/custom_hosts" android:key="customHosts" android:summary="@string/custom_hosts_summary" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/web_service_wake_lock" android:key="webServiceWakeLock" android:summary="@string/web_service_wake_lock_summary" android:defaultValue="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/book_tree_uri_t" android:key="defaultBookTreeUri" android:summary="@string/book_tree_uri_s" />
        <io.legado.app.lib.prefs.Preference android:title="@string/source_edit_text_max_line" android:key="sourceEditMaxLine" />
        <io.legado.app.lib.prefs.Preference android:title="@string/check_source_config" android:key="checkSource" />
        <io.legado.app.lib.prefs.Preference android:title="@string/direct_link_upload_rule" android:key="uploadRule" android:summary="@string/direct_link_upload_rule_summary" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="Cronet" android:key="Cronet" android:summary="@string/pref_cronet_summary" android:defaultValue="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/anti_alias" android:key="antiAlias" android:summary="@string/pref_anti_alias_summary" android:defaultValue="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/bitmap_cache_size" android:key="bitmapCacheSize" android:summary="@string/bitmap_cache_size_summary" />
        <io.legado.app.lib.prefs.Preference android:title="@string/image_retain_number" android:key="imageRetainNum" android:summary="@string/image_retain_number_summary" />
        <io.legado.app.lib.prefs.Preference android:title="@string/pre_download" android:key="preDownloadNum" android:summary="@string/pre_download_s" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/replace_enable_default_t" android:key="replaceEnableDefault" android:summary="@string/replace_enable_default_s" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/media_button_on_exit_title" android:key="mediaButtonOnExit" android:summary="@string/media_button_on_exit_summary" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/read_aloud_by_media_button_title" android:key="readAloudByMediaButton" android:summary="@string/read_aloud_by_media_button_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/ignore_audio_focus_title" android:key="ignoreAudioFocus" android:summary="@string/ignore_audio_focus_summary" android:defaultValue="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/auto_clear_expired" android:key="autoClearExpired" android:summary="@string/auto_clear_expired_summary" android:defaultValue="true" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_add_to_shelf_alert_title" android:key="showAddToShelfAlert" android:summary="@string/show_add_to_shelf_alert_summary" android:defaultValue="true" />
        <io.legado.app.lib.prefs.NameListPreference android:title="@string/update_to_variant_title" android:key="updateToVariant" android:summary="@string/update_to_variant_summary" android:defaultValue="default_version" app:allowDividerAbove="false" app:allowDividerBelow="false" app:entries="@array/default_app_variant" app:entryValues="@array/default_app_variant_value" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_manga_ui" android:key="showMangaUi" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/video_setting" android:key="videoSetting" android:summary="@string/video_setting_summary" />
        <io.legado.app.lib.prefs.Preference android:title="@string/web_port_title" android:key="webPort" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/clear_cache" android:key="cleanCache" android:summary="@string/clear_cache_summary" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/clear_webview_data" android:key="clearWebViewData" android:summary="@string/clear_webview_data_summary" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/shrink_database" android:key="shrinkDatabase" android:summary="@string/shrink_database_summary" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/threads_num_title" android:key="threadCount" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/add_to_text_context_menu_t" android:key="process_text" android:summary="@string/add_to_text_context_menu_s" android:defaultValue="true" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/record_log" android:key="recordLog" android:summary="@string/record_debug_log" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/record_heap_dump_t" android:key="recordHeapDump" android:summary="@string/record_heap_dump_s" android:defaultValue="false" app:iconSpaceReserved="false" />
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
