<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.IconListPreference android:entries="@array/icon_names" android:title="@string/change_icon" android:key="launcherIcon" android:summary="@string/change_icon_summary" android:defaultValue="ic_launcher" android:entryValues="@array/icons" app:iconSpaceReserved="false" app:icons="@array/icons" />
    <io.legado.app.lib.prefs.Preference android:title="@string/welcome_style" android:key="welcomeStyle" android:summary="@string/welcome_style_summary" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/immersion_status_bar" android:key="transparentStatusBar" android:summary="@string/status_bar_immersion" android:defaultValue="true" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/imm_navigation_bar" android:key="immNavigationBar" android:summary="@string/imm_navigation_bar_s" android:defaultValue="true" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.Preference android:title="@string/bar_elevation" android:key="barElevation" android:summary="@string/bar_elevation_s" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.Preference android:title="@string/font_scale" android:key="fontScale" android:summary="@string/font_scale_summary" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.Preference android:title="@string/cover_config" android:key="coverConfig" android:summary="@string/cover_config_summary" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.Preference android:title="@string/theme_list" android:key="themeList" android:summary="@string/theme_list_summary" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <io.legado.app.lib.prefs.PreferenceCategory android:title="@string/day" android:key="dayThemeCategory" app:allowDividerAbove="true" app:allowDividerBelow="false" app:iconSpaceReserved="false" app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/primary" android:key="colorPrimary" android:summary="@string/day_color_primary" android:defaultValue="@color/md_brown_500" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/accent" android:key="colorAccent" android:summary="@string/day_color_accent" android:defaultValue="@color/md_red_600" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/background_color" android:key="colorBackground" android:summary="@string/day_background_color" android:defaultValue="@color/md_grey_100" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/navbar_color" android:key="colorBottomBackground" android:summary="@string/day_navbar_color" android:defaultValue="@color/md_grey_200" app:allowDividerAbove="false" app:allowDividerBelow="false" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/background_image" android:key="backgroundImage" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/immersion_nav_bar" android:key="transparentNavBar" android:summary="@string/day_nav_bar_immersion" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/save_theme_config" android:key="saveDayTheme" android:summary="@string/save_day_theme_summary" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    </io.legado.app.lib.prefs.PreferenceCategory>
    <io.legado.app.lib.prefs.PreferenceCategory android:title="@string/night" android:key="nightThemeCategory" app:allowDividerAbove="true" app:allowDividerBelow="false" app:iconSpaceReserved="false" app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/primary" android:key="colorPrimaryNight" android:summary="@string/night_primary" android:defaultValue="@color/md_blue_grey_600" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/accent" android:key="colorAccentNight" android:summary="@string/night_accent" android:defaultValue="@color/md_deep_orange_800" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/background_color" android:key="colorBackgroundNight" android:summary="@string/night_background_color" android:defaultValue="@color/md_grey_900" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.ColorPreference android:title="@string/navbar_color" android:key="colorBottomBackgroundNight" android:summary="@string/night_navbar_color" android:defaultValue="@color/md_grey_850" app:cpv_dialogType="preset" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/background_image" android:key="backgroundImageNight" />
        <io.legado.app.lib.prefs.SwitchPreference android:title="@string/immersion_nav_bar" android:key="transparentNavBarNight" android:summary="@string/night_nav_bar_immersion" android:defaultValue="false" app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference android:title="@string/save_theme_config" android:key="saveNightTheme" android:summary="@string/save_night_theme_summary" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
