<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <io.legado.app.ui.widget.text.AccentTextView android:textSize="18.0sp" android:paddingBottom="16.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/change_theme" android:layout_weight="1.0" />
            <Switch android:id="@id/switch_system_auto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/system_auto" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RadioGroup android:orientation="vertical" android:id="@id/ch_theme_l" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="20.0dp">
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_monokai_dimmed" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_modern_dark" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_solarized_dark" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_abyss" android:paddingEnd="12.0dp" />
            </RadioGroup>
            <RadioGroup android:orientation="vertical" android:id="@id/ch_theme_r" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="20.0dp">
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_monokai" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_modern_light" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_solarized_light" android:paddingEnd="12.0dp" />
                <RadioButton android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/edit_theme_quiet_light" android:paddingEnd="12.0dp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
