<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="?actionBarStyle" android:id="@id/tool_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:popupTheme="@style/AppTheme.PopupOverlay" app:title="@string/direct_link_upload_config" app:titleTextAppearance="@style/ToolbarTitle" />
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <io.legado.app.ui.widget.text.TextInputLayout android:paddingTop="3.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <io.legado.app.lib.theme.view.ThemeEditText android:id="@id/edit_upload_url" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/upload_url" />
            </io.legado.app.ui.widget.text.TextInputLayout>
            <io.legado.app.ui.widget.text.TextInputLayout android:paddingTop="3.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <io.legado.app.lib.theme.view.ThemeEditText android:id="@id/edit_download_url_rule" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/download_url_rule" />
            </io.legado.app.ui.widget.text.TextInputLayout>
            <io.legado.app.ui.widget.text.TextInputLayout android:paddingTop="3.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <io.legado.app.lib.theme.view.ThemeEditText android:id="@id/edit_summary" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/summary" />
            </io.legado.app.ui.widget.text.TextInputLayout>
            <io.legado.app.lib.theme.view.ThemeCheckBox android:id="@id/cb_compress" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48.0dp" android:text="@string/is_compress" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.flexbox.FlexboxLayout android:paddingLeft="12.0dp" android:paddingRight="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:flexWrap="wrap" app:justifyContent="space_between">
        <io.legado.app.ui.widget.text.AccentTextView android:id="@id/tv_footer_left" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <io.legado.app.ui.widget.text.AccentTextView android:id="@id/tv_cancel" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
            <io.legado.app.ui.widget.text.AccentTextView android:id="@id/tv_ok" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" />
        </LinearLayout>
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>
